[project]
name = "extract_basin_shapefiles"
version = "0.1.0"
description = "Automated watershed delineation from a DEM and pour points, powered by whitebox-tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "rasterio>=1.4.3",
    "whitebox>=2.3.6",
]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.8"]

[tool.ruff]
line-length = 120
target-version = "py310" # Assuming Python 3.10+
fix = false

[tool.ruff.lint]
# E/F (Pyflakes), W (pycodestyle), N (pep8-naming), I (isort),
# UP (pyupgrade), B (flake8-bugbear), C4 (flake8-comprehensions), SIM (flake8-simplify)
select = ["E", "F", "W", "N", "I", "UP", "B", "C4", "SIM"]
